Shadow fix on mobile

--- a/assets/csp-custom.css
+++ b/assets/csp-custom.css
@@ -299,7 +299,7 @@ body {
   justify-content: center;
   align-items: center;
   margin: 0;
-  text-shadow: #fff 2px 1px 1px;
+  text-shadow: #fff 2px 1px 0;
   font-weight: 700;
   line-height: 0.8;
   letter-spacing: -2px;
@@ -469,11 +469,11 @@ input.prevent-highlight {
     left: 50%;
   }
   #sign-text-overlay {
-    text-shadow: #fff 1px 2px 0;
-    -webkit-text-shadow: #fff 1px 2px 0; /* For Safari and Chrome */
-    -moz-text-shadow: #fff 1px 2px 0; /* For Firefox */
-    -ms-text-shadow: #fff 1px 2px 0; /* For IE */
-    -o-text-shadow: #fff 1px 2px 0; /* For Opera */
+    text-shadow: 1px 1px 0 #fff;
+    -webkit-text-shadow: 1px 1px 0 #fff; /* For Safari and Chrome */
+    -moz-text-shadow: 1px 1px 0 #fff; /* For Firefox */
+    -ms-text-shadow: 1px 1px 0 #fff; /* For IE */
+    -o-text-shadow: 1px 1px 0 #fff; /* For Opera */
   }
 }
 
